# obelisk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .obk_aliases  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  debug.txt  dev_setup.sh  empty_pixi.toml  entrypoint.sh  environment.yml  pixi.toml  pyproject.toml  pyrightconfig.json  pytest.ini  repro.sh  ruff.toml  setup.sh  startup.sh
obelisk/cpp/: CMakeLists.txt
obelisk/cpp/hardware/: CMakeLists.txt
obelisk/cpp/hardware/include/: jointencoders_passthrough_estimator.h  position_setpoint_controller.h  themis_example_controller.h  themis_fsm.h  unitree_example_controller.h  unitree_example_estimator.h  unitree_fsm.h  unitree_go2_estimator.h  unitree_joystick.h
obelisk/cpp/hardware/robots/unitree/: CMakeLists.txt  g1_interface.h  go2_interface.h  unitree_interface.h
obelisk/cpp/hardware/robots/westwood/: CMakeLists.txt  themis_interface.h
obelisk/cpp/hardware/sensing/zed/: CMakeLists.txt  zed2_sensors_interface.h
obelisk/cpp/lib1/: CMakeLists.txt  place_holder.cpp
obelisk/cpp/lib1/include/: place_holder.h
obelisk/cpp/obelisk_cpp/: CMakeLists.txt  obelisk_node.cpp
obelisk/cpp/obelisk_cpp/include/: obelisk_controller.h  obelisk_estimator.h  obelisk_mujoco_sim_robot.h  obelisk_node.h  obelisk_robot.h  obelisk_ros_utils.h  obelisk_ros_utls.h  obelisk_sensor.h  obelisk_sim_robot.h
obelisk/cpp/obelisk_cpp/lidar/: depth_interface.h  height_scan_interface.h  lidar_interface.h  ray_caster_interface.h
obelisk/cpp/tests/: CMakeLists.txt  dummy_test.cpp  dummy_test.h  dummy_test_2.cpp
obelisk/cpp/utils/: CMakeLists.txt
obelisk/cpp/utils/include/: msg_conversions.h
obelisk/cpp/viz/: CMakeLists.txt
obelisk/cpp/viz/include/: obelisk_viz_robot.h  obelisk_viz_robot_default.h
obelisk/cpp/zoo/: CMakeLists.txt
obelisk/cpp/zoo/include/: jointencoders_passthrough_estimator.h  leap_example_position_setpoint_controller.h  leap_example_state_estimator.h  leap_position_setpoint_controller.h  position_setpoint_controller.h  unitree_example_controller.h  unitree_example_estimator.h  unitree_go2_estimator.h  unitree_joystick.h
obelisk/cpp/zoo/robot/: CMakeLists.txt  leap_hand_interface.h  leap_test.cpp
obelisk/cpp/zoo/sensing/: CMakeLists.txt  zed2_sensors.h
obelisk/python/: README.md  pyproject.toml
obelisk/python/obelisk_py/: __init__.py  control.py  estimation.py  exceptions.py  internal_utils.py  node.py  obelisk_typing.py  robot.py  sensing.py  utils.py
obelisk/python/obelisk_py/core/: control.py  estimation.py  node.py  obelisk_typing.py  robot.py  sensing.py
obelisk/python/obelisk_py/core/sim/: mujoco.py
obelisk/python/obelisk_py/core/utils/: internal.py  launch_utils.py  msg.py  ros.py
obelisk/python/obelisk_py/utils/: internal.py  launch.py  launch_utils.py
obelisk/python/obelisk_py/zoo/estimation/: d1_estimator.py  jointencoders_passthrough_estimator.py
obelisk/python/obelisk_py/zoo/sensing/: zed2.py
obelisk_ws/src/cpp/hardware/obelisk_leap_cpp/: CMakeLists.txt
obelisk_ws/src/cpp/hardware/obelisk_unitree_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/hardware/obelisk_westwood_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_control_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_control_cpp/src/: example_position_setpoint_controller.cpp
obelisk_ws/src/cpp/obelisk_estimation_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_estimation_cpp/src/: jointencoders_passthrough_estimator.cpp
obelisk_ws/src/cpp/obelisk_leap_control_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_leap_control_cpp/src/: obelisk_leap_controller.cpp  obelisk_leap_robot.cpp
obelisk_ws/src/cpp/obelisk_leap_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_leap_cpp/src/: leap_example_controller.cpp  obelisk_leap_controller.cpp
obelisk_ws/src/cpp/obelisk_sensing_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_sim_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_sim_cpp/src/: hello_world.cpp  obelisk_mujoco_robot.cpp  ray_caster_demo.cpp
obelisk_ws/src/cpp/obelisk_viz_cpp/: CMakeLists.txt  package.xml
obelisk_ws/src/cpp/obelisk_viz_cpp/src/: default_robot_viz.cpp
obelisk_ws/src/obelisk_msgs/obelisk_estimator_msgs/: CMakeLists.txt  package.xml
obelisk_ws/src/obelisk_msgs/obelisk_estimator_msgs/msg/: EstimatedState.msg
obelisk_ws/src/obelisk_msgs/obelisk_sensor_msgs/: CMakeLists.txt  package.xml
obelisk_ws/src/obelisk_msgs/obelisk_sensor_msgs/msg/: JointEncoder.msg  JointEncoders.msg  MujocoImage.msg  ObkDepthImage.msg  ObkForceSensor.msg  ObkFramePose.msg  ObkImage.msg  ObkImu.msg  ObkJointEncoders.msg  ObkScan.msg  ObkScanDots.msg  TrueSimState.msg
obelisk_ws/src/robots/dummy_bot/: CMakeLists.txt  package.xml
obelisk_ws/src/robots/dummy_bot/mujoco/: dummy.xml
obelisk_ws/src/robots/dummy_bot/urdf/: dummy_bot.urdf
obelisk_ws/src/robots/g1_description/: CMakeLists.txt  package.xml
obelisk_ws/src/robots/g1_description/mujoco/: basic_scene.xml  g1_27dof.xml  g1_27dof_fixed_base.xml  g1_29dof_with_hand.xml  g1_basic_scene.xml  g1_fixed_base.xml
obelisk_ws/src/robots/g1_description/urdf/: g1.urdf  r2d2.urdf
obelisk_ws/src/robots/themis_description/: CMakeLists.txt  package.xml
obelisk_ws/src/robots/themis_description/meshes/: ANKLE_L.STL  ANKLE_R.STL  ELBOW_L.STL  ELBOW_R.STL  FEMUR_L.STL  FEMUR_R.STL  FOOT_L.STL  FOOT_R.STL  FOREARM_L.STL  FOREARM_R.STL  HEAD.STL  HIP_L.STL  HIP_R.STL  LOWERSHOULDER_L.STL  LOWERSHOULDER_R.STL  (+11 more)
tests/tests_cpp/: CMakeLists.txt  claude_obelisk_controller_test.cpp  claude_obelisk_estimator_test.cpp  claude_obelisk_node_test.cpp  claude_obelisk_robot_test.cpp  claude_obelisk_sensor_test.cpp  claude_obelisk_sim_robot_test.cpp  dummy_test.cpp  dummy_test_2.cpp  test_controller.cpp  test_estimator.cpp  test_lidar_interfaces.cpp  test_mujoco_sim_robot.cpp  test_node.cpp  test_robot.cpp  test_sensor.cpp  test_sim_robot.cpp  test_viz_robot.cpp  test_viz_robot_default.cpp  test_yaml_to_node.cpp  tests_utils.cpp
tests/tests_cpp/test_data/: r2d2.urdf
(+405 files in other folders)
