[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obelisk"
version = "0.0.1"
description = "Repository for fast robust grasp generation"
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.3.7",    
]

dev = [
    "obelisk[docs]",
]
