[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obelisk_py"
version = "0.0.1"
description = "Repository for fast robust grasp generation"
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["obelisk_py*"]
