[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obelisk_py"
version = "0.0.1"
description = "The core Obelisk python packages."
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = []

[tool.hatch.build.targets.wheel]
include = ["obelisk_py*"]

[tool.ruff]
line-length = 80
